force-app/main/default/objects/Account/fields/Annual_Sales_Total__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Total__c</fullName>
    <label>Annual Sales Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>