force-app/main/default/objects/Account/fields/Merchant_Code__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Code__c</fullName>
    <description>Merchant identity code</description>
    <label>Merchant Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>