force-app/main/default/objects/Account/fields/Merchant_Summary__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Summary__c</fullName>
    <description>Summary of the merchant</description>
    <label>Merchant Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>