force-app/main/default/objects/Account/fields/Payout_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payout_Terms__c</fullName>
    <description>This picklist tracks the terms and frequency of payouts to the partner.</description>
    <label>Payout Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Biweekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>On-Demand</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>