force-app/main/default/objects/Account/fields/Total_Storefronts__c.field-meta.xml
<CustomField>
    <fullName>Total_Storefronts__c</fullName>
    <label>Total Storefronts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>