force-app/main/default/objects/Account/recordTypes/Customer_Account.recordType-meta.xml
<RecordType>
    <fullName>Customer_Account</fullName>
    <active>true</active>
    <description>Represents individual customers who use the platform to place orders and enjoy personalized food delivery experiences. This record type is tailored for tracking customer-specific details like preferences, order history, and loyalty points.</description>
    <label>Customer Account</label>
</RecordType>