force-app/main/default/objects/Account/recordTypes/Partner_Account.recordType-meta.xml
<RecordType>
    <fullName>Partner_Account</fullName>
    <active>true</active>
    <description>Represents restaurant partners and merchants collaborating to provide food delivery services. This record type is designed for managing business-related information, such as menu details, operational hours, and revenue statistics.</description>
    <label>Partner Account</label>
</RecordType>