force-app/main/default/objects/Account/listViews/Customers.listView-meta.xml
<ListView>
    <fullName>Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer_Account</value>
    </filters>
    <label>Customers</label>
</ListView>